# mamaguard

./: .gitignore  ARCHITECTURE.md  FHIR_DATA_REFERENCE.md  LICENSE  Makefile  README.md  SECURITY_COMPLIANCE_RESEARCH.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  base.py  config.py  runner.py
benchmarks/clinical_reasoning/: __init__.py  bench_ai_factor_comparison.py  bench_baseline_comparison.py  bench_care_plan_synthesis.py  bench_reasoning_trace.py  bench_risk_assessment.py
benchmarks/e2e/: __init__.py  agent_factory.py  bench_e2e.py  cases.py  fhir_server.py  runner_harness.py  trace_capture.py
benchmarks/fhir_tools/: __init__.py  bench_maternal.py  bench_pediatric.py  bench_sdoh.py
benchmarks/fixtures/: __init__.py  ai_factor_comparison.json  ai_factor_comparison.md  baseline_comparison_table.json  baseline_comparison_table.md  eval_summary.md  judge_scorecard.md  maternal.py  pediatric.py  reasoning_trace_maria.json  safety_report.md  sdoh.py  session_2026_04_14.md  tier2a_baseline.json  tier2a_final.json  tier2a_post_safety.json  tier2a_session_2026_04_14.txt  tier2b_session_2026_04_14.txt
benchmarks/llm_eval/: __init__.py  bench_clinical.py  bench_routing.py  bench_safety.py  client.py  judge.py  scenarios.py
benchmarks/medagent/: __init__.py  bench_medagent.py  cases.py
current_tasks/: actionable-sdoh.md  ai-factor-comparison.md  baseline-comparison-table.md  care-plan-synthesis-bench.md  fhir-hook-tests.md  fix-ci-hapi-bundle-loading.md  golden-clinician-review.md  logging-utils-tests.md  maternal-5t-rewrite.md  mcp-server.md  middleware-unit-tests.md  mother-child-handoff.md  optimize-tool-efficiency.md  pediatric-liaison-pattern.md  pediatric-sdoh-test-expansion.md  phase1-benchmark-client-compat.md  po-integration-notes.md  safety-filter.md  simplify-benchmarks.md  task-34-clinical-edge-cases.md  task-43-devpost-scores.md  task-57-tier1-regression.md  task50-harden-multi-turn.md  tier2a-rerun.md  update-task-md-completion.md  writeback-error-tests.md
mamaguard/: .dockerignore  .env.example  Dockerfile  Procfile  __init__.py  app.py  docker-compose.yml  requirements.lock.txt  requirements.txt
mamaguard/sdoh_agent/: agent.py
scripts/: check_litellm_supply_chain.py  demo_content_gate.py  demo_memory_recall.py  demo_pre_record_cleanup.sh  deploy.sh  export_bundles_for_po.py  hard_a2a_smoke.py  load_bundles.py  load_po_alias.py  pre_deploy_check.sh  profile_startup.py  run_submission_benchmark.sh  seed_related_person.py  smoke_test.py  smoke_test_mcp.py  tier2a_compare.py
(+118 files in other folders)
