[project]
name = "mamaguard"
version = "0.1.0"
description = "MamaGuard: Maternal-Pediatric Care Coordination Agent"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=1.25.0",
    "a2a-sdk[http-server]>=0.3.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.41.0",
    "mcp[server]>=1.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mamaguard*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["mamaguard/tests"]
filterwarnings = [
    # Google ADK A2A support is experimental — expected, nothing we can do.
    'ignore:\[EXPERIMENTAL\]:UserWarning',
    # Test-only HMAC keys are intentionally short; production uses 32+ byte secrets.
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
