[project]
name = "mamaguard"
version = "1.0.0"
description = "MamaGuard: Maternal-Pediatric Care Coordination Agent"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.29.0",
    "litellm==1.83.14",
    "a2a-sdk[http-server]==0.3.26",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "uvicorn==0.44.0",
    "mcp==1.27.0",
    "PyJWT==2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mamaguard*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["mamaguard/tests"]
filterwarnings = [
    # Google ADK A2A support is experimental — expected, nothing we can do.
    'ignore:\[EXPERIMENTAL\]:UserWarning',
    # Test-only HMAC keys are intentionally short; production uses 32+ byte secrets.
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Hackathon deadline guardrails: these rules produce a lot of noise on
# prompt strings and would block a clean first run. Revisit post-submission.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"mamaguard/tests/*" = ["E402"]
